buildstuff/2019/reverse-proxy-nginx-traefik/demo5/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - host: pi.local
      http:
        paths:
          - backend:
              serviceName: pi
              servicePort: http
    - host: todo.local
      http:
        paths:
          - backend:
              serviceName: todo
              servicePort: http
    - host: blog.local
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: http
